--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,8 @@
 homepage: "https://blitzllama.com/"
 documentation: "https://documentation.blitzllama.com/"
 versions:
+  - sha:
+    changeNotes: Add Trigger Survey functionality
   - sha: 1f3fd777221b3349cff3da02fcb2dce391553622
     changeNotes: Add attribute functionality
   - sha: 5a6fcde58423ae0565b65e4af481a5a8d9447867
